--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <title>Vue 3 Element UI Template</title>
 </head>
 <body id="app">
-<script type="module" src="/src/main.js"></script>
+<script type="module" src="/src/main.ts"></script>
 </body>
 </html>
